--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "vite-project",
+  "name": "mongoose",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "lint": "eslint src",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start": "node src/example.js"
   },
   "dependencies": {
-    "mongodb": "^6.3.0"
+    "dotenv": "^16.5.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@types/react-dom": "^18.2.15",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -28,5 +30,20 @@
       "npx prettier --write",
       "npx eslint --fix"
     ]
-  }
+  },
+  "description": "This is a simple blog application built with Go and MongoDB. It provides a RESTful API to manage blog posts.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/liliiakryvelova/Mongoose-React-App.git"
+  },
+  "keywords": [
+    "liliia"
+  ],
+  "author": "liliia kryvelova",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/liliiakryvelova/Mongoose-React-App/issues"
+  },
+  "homepage": "https://github.com/liliiakryvelova/Mongoose-React-App#readme"
 }
