feat: added jest config

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "eslint src",
     "prepare": "husky install",
     "start": "node src/example.js"
@@ -22,7 +23,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
+    "mongodb-memory-server": "^9.1.1",
     "prettier": "^3.3.3"
   },
   "lint-staged": {
